[package]
name = "cloudmapper"
version = "0.1.0"
edition = "2024"
description = "AWS infrastructure inventory exporter for agent-readable JSON and graph artifacts"
repository = "https://github.com/avkcode/cloudmapper"
publish = false
rust-version = "1.85"

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.16", features = ["credentials-login"] }
aws-sdk-ec2 = "1.226.0"
aws-sdk-iam = "1.108.1"
aws-sdk-lambda = "1.122.0"
aws-sdk-resourcegroupstagging = "1.98.0"
aws-sdk-s3 = "1.132.0"
aws-sdk-sts = "1.103.0"
aws-types = "1.3.15"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
futures = "0.3.32"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
